--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,8 @@ clap = "2"
 mh-z19 = "0.1.0"
 log = "0.4"
 env_logger = "0.6"
-actix-web = "0.7"
 structopt = "0.2"
-actix="0.7"
-futures="0.1"
 chrono="0.4"
 error-chain = "0.12"
 rumqtt = "0.30.1"
+crossbeam-channel = "0.3"
