--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,5 @@ structopt = "0.2"
 chrono="0.4"
 error-chain = "0.12"
 rumqtt = "0.30.1"
-crossbeam-channel = "0.3"
+crossbeam="0.7"
 rouille="3.0"
