--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2018"
 repository = "https://github.com/zenria/co2-meter-rs"
 
 [dependencies]
-serialport = { git = "https://github.com/zenria/serialport-rs.git", branch="3.2.0-hacked_for_rbpi" }
+serialport = { git = "https://github.com/zenria/serialport-rs.git", branch="3.2.0-hacked_for_rbpi", features=[], default-features = false }
 clap = "2"
-mh-z19 = "0.2.0"
+mh-z19 = "0.3.1"
 log = "0.4"
 env_logger = "0.6"
 structopt = "0.2"
